b-Ocracy v1.1.0a28 - Fixed giving 5 coins when winning newStats countries, fixed clicking on no in cortofa store, fixed not going back to homepage when going to first time unlock for the second time, fixed overflow hiding on the ad, fixed store going back to old build parameter

--- a/a/index.css
+++ b/a/index.css
@@ -89,7 +89,6 @@ a { color: white; text-decoration: underline; cursor: pointer;}
 	padding: 2.5%;
 	width: 95%;
 	max-width:95%;min-width: 95%;
-	max-height:100px;
 }
 .ads {
 	width: 100%;
